test/compile-fail/use-and-assign-before-decl.as
method();

let mutable counter;

def method() {
  let value = counter;
  counter = 10;
}
